--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -1,7 +1,7 @@
 .topbarContainer{
     height: 50px;
     width: 100%;
-    background-color: red;
+    background-color:#1B74E4;
     display: flex;
     align-items: center;
     position: sticky;
@@ -34,7 +34,7 @@
 .searchInput:focus{
     outline: none;
 }
-.
+
 .topbarLeft{
     flex: 3;
   
@@ -45,12 +45,47 @@
 }
 .topbarRight{
     flex:4;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   
+}
+.topbarIcon{
+    display: flex;
+}
+.topbarLink{
+    color:white;
+    margin-left: 15px;
+}
+.topbarItemsIcon{
+    color: white;
+    display: flex;
+    margin-right: 15px;
+    cursor: pointer;
+    position: relative;
+}
+.topbarIconBadge{
+    width: 15px;
+    height: 15px;
+    background-color: blue;
+    border-radius: 50%;
+    position:absolute ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    color:white;
+    left: -6px;
+}
+/* .profileImage{
+
 }
 img{
     width:100%
-}
+} */
 .topbarImg{
     width: 32px;
     height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
 }
